--- a/src/pages/project/_components/ShowcaseCard/styles.module.css
+++ b/src/pages/project/_components/ShowcaseCard/styles.module.css
@@ -56,6 +56,16 @@
   color: var(--site-color-svg-icon-favorite);
 }
 
+.svgIcon {
+  user-select: none;
+  width: 1em;
+  height: 1em;
+  display: inline-block;
+  fill: currentColor;
+  flex-shrink: 0;
+  color: inherit;
+}
+
 .showcaseCardSrcBtn {
   margin-left: 6px;
   padding-left: 12px;
